tests/netgen/grid/errors/grid_x_number__1/options.netgen
--grid --grid.x-number=0 --grid.length=400 --output=net.net.xml
